--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -14,6 +14,13 @@
             android:paddingTop="10dp"
             android:paddingLeft="20dp"
             android:paddingBottom="10dp">
+
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </com.android.volley.toolbox.NetworkImageView>
+
             <TextView
                 android:id="@+id/number_room"
                 android:layout_width="match_parent"
@@ -29,6 +36,8 @@
                 android:layout_height="wrap_content"
                 android:text="xDx">
             </TextView>
+
+
         </LinearLayout>
     </LinearLayout>
 
