--- a/app/src/main/res/layout/activity_room_description.xml
+++ b/app/src/main/res/layout/activity_room_description.xml
@@ -7,19 +7,42 @@
     tools:context=".RoomDescriptionActivity">
 
     <LinearLayout
+        android:background="@drawable/hotelback"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/imgFoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:layout_gravity="center_horizontal"/>
         <TextView
             android:id="@+id/txtHabitacionName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=" NOMBRE DE HABITACION" />
+            android:text=" NOMBRE DE HABITACION"
+            android:textColor="@color/otherWhite"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnComprar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="COMPRAR"
+            android:background="@drawable/dw_button1desing" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FAVORITOS"
+            android:background="@drawable/dw_button1desing"
+            android:layout_marginLeft="15dp"/>
+    </LinearLayout>
 
     </LinearLayout>
 
